# Geology

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_corrupted.md  __init__.py  borehole_file.csv  demo.ipynb  gpu_acceleration.ipynb  inv_model.npy  inv_model_cat.npy  profile2.txt  pyproject.toml  read_bohole_file.ipynb  real_model.npy  real_model_cat.npy  requirements-dev.txt  requirements-geo.txt  requirements-viz.txt  requirements.txt  setup.py  setup_backup.py  setup_clean.py
geo_vtk/: LICENSE  MANIFEST.in  README.md  pyproject.toml
geo_vtk/data/2d_data/: ahn3_05m_dtm_merge.tif  em_data.csv  ert_coordiantes.txt  ert_resutls.xyz
geo_vtk/data/Boreholes/: F1.txt  F2.txt  F3.txt  F4.txt  F5.txt  F6.txt  F7.txt  F8.txt  MH1.txt  MH2.txt  MH3.txt
geo_vtk/data/arcgis/: d50_1m.ASC.xml  d50_1m.asc  d50_1m.prj  gebied_S7-20.dbf  gebied_S7-20.sbn  gebied_S7-20.sbx  gebied_S7-20.shp  gebied_S7-20.shp.xml  gebied_S7-20.shx  noordzee_vak_S7.xml  seismieklistS7.txt  uitgevoerde_boringen_NITGnr_S7-20.dbf  uitgevoerde_boringen_NITGnr_S7-20.sbn  uitgevoerde_boringen_NITGnr_S7-20.sbx  uitgevoerde_boringen_NITGnr_S7-20.shp  uitgevoerde_boringen_NITGnr_S7-20.shx
geo_vtk/data/vtk/: borehole_legend.txt
geo_vtk/src/: .gitlab-ci.yml  __init__.py  bgr.json  cli.py  demo_3d_grid_data.py  demo_asc.py  demo_make_simple_geometry.py  demo_xml.py  geo_utils.py  setup.py  untitled0.yml
geo_vtk/src/tests/: demo_2d_profile.py  demo_make_dem.py  demo_make_simple_geometry.py  demo_read_multiple_boreholes_and_generate_vtk.py  demo_shapefiles.py  geo_utils.py
geo_vtk/src/vtkclass/: VtkClass.py  __init__.py  make_3d.py
geology/: __init__.py  core.py
gridder/: __init__.py  gridder.py
